--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     // Splash Screen
     implementation "androidx.core:core-splashscreen:1.0.0"
+
+    // Graph View
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
