--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,14 @@
         android:theme="@style/MySplashScreen"
         tools:targetApi="31">
         <activity
-            android:name=".ui.diagnostics.DiagnosticsResultActivity"
-            android:exported="false" />
-        <activity
             android:name=".ui.diagnostics.PairedDiagnosticsActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.EyesDoctorApp" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
